--- a/META.yml
+++ b/META.yml
@@ -1,18 +1,18 @@
 --- #YAML:1.0
 name: DateTime-Util-Astro
-version: 0.01
+version: 0.02
+author:
+  - ~
+abstract: |-
+  Utilities for DateTime Extensions That Require Astronomical Calculations
 license: perl
-distribution_type: module
 requires:
   DateTime: 0
-  DateTime::Util::Calc: 0
+  DateTime::Util::Calc: 0.02
   Math::Trig: 0
   POSIX: 0
   Params::Validate: 0
 recommends:
-  Math::BigFloat: 0
-  Math::BigInt: 0
-  Math::BigInt::GMP: 0
   perl: 5.6.1
 build_requires:
   Test::More: 0
@@ -29,5 +29,5 @@ provides:
     version: 0.01
   DateTime::Util::Astro::Sun:
     file: lib/DateTime/Util/Astro/Sun.pm
-    version: 0.01
-generated_by: Module::Build version 0.21
+    version: 0.02
+generated_by: Module::Build version 0.22
