--- a/META.yml
+++ b/META.yml
@@ -1,33 +1,30 @@
 --- #YAML:1.0
 name: DateTime-Util-Astro
-version: 0.02
-author:
-  - ~
-abstract: |-
-  Utilities for DateTime Extensions That Require Astronomical Calculations
+version: 0.04
+author: ~
+abstract: ~
 license: perl
 requires:
+  Cache::Cache: 0
   DateTime: 0
-  DateTime::Util::Calc: 0.02
+  DateTime::Util::Calc: 0.08
+  Math::BigFloat: 0
+  Math::BigInt: 0
   Math::Trig: 0
   POSIX: 0
-  Params::Validate: 0
-recommends:
-  perl: 5.6.1
 build_requires:
   Test::More: 0
-conflicts: {}
 provides:
   DateTime::Util::Astro::::Location:
     file: lib/DateTime/Util/Astro/Common.pm
-    version: 0.01
+    version: 0.02
   DateTime::Util::Astro::Common:
     file: lib/DateTime/Util/Astro/Common.pm
-    version: 0.01
+    version: 0.02
   DateTime::Util::Astro::Moon:
     file: lib/DateTime/Util/Astro/Moon.pm
-    version: 0.01
+    version: 0.03
   DateTime::Util::Astro::Sun:
     file: lib/DateTime/Util/Astro/Sun.pm
-    version: 0.02
-generated_by: Module::Build version 0.22
+    version: 0.03
+generated_by: Module::Build version 0.2607
