--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,11 @@
 --- 
+abstract: Utilities for Astronomical Calculations
+author: 
+  - Daisuke Maki <daisuke@endeworks.jp>
+build_requires: 
+  Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.67
+generated_by: Module::Install version 0.68
 license: perl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -19,4 +24,4 @@ requires:
   Math::BigInt: 0
   Math::Trig: 0
   POSIX: 0
-version: 0.11001
+version: 0.12000
